# jpo-swiat

./: CMakeLists.txt  README.md  emotki.txt  main.cpp  przydzielanie_numerow.rb  testwygladu.txt
src/: Ekran.cpp  Ekran.h  Organizm.cpp  Organizm.h  Pozycja.cpp  Pozycja.h  Swiat.cpp  Swiat.h  main.cpp
src/Ekran/: KolorowyZnak.cpp  KolorowyZnak.h
src/Organizm/: OrganizmyStuff.h
src/organizm/: Roslina.h  Zwierze.cpp
src/organizm/roslina/: Koka.h  Mlecz.cpp  Mlecz.h  Trawa.h
src/organizm/zwierze/: Leniwiec.h  Owca.cpp  Wilk.h  Zaba.cpp  Zmija.cpp
src/organizmy/: Roslina.cpp  Roslina.h  Zwierze.cpp  Zwierze.h
src/organizmy/rosliny/: Koka.cpp  Koka.h  Mlecz.cpp  Mlecz.h  Trawa.cpp  Trawa.h
src/organizmy/zwierzeta/: Leniwiec.cpp  Leniwiec.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zaba.cpp  Zaba.h  Zmija.cpp  Zmija.h
